# OpenGL_Project

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: billboard.frag  billboard.vert  triangle.frag  triangle.vert
libs/cyCodeBase/: cyBVH.h  cyGL.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
projects/: IG_P1 Hello World.md  IG_P2 Transformations.md  IG_P3 Shading.md
shaders/: triangle.frag  triangle.vert
src/: LightGizmo.cpp  LightGizmo.h  main.cpp
